--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Reservas-de-ambientes
 
-spring.datasource.url=jdbc:mysql://localhost:3306/AmbientesReserva
+spring.datasource.url=jdbc:mysql://localhost:3306/ambientesreserva
 spring.datasource.username=root
 spring.datasource.password=root
 
